# primeday

./: .gitignore  License.txt  Pipfile  README.rst  pyproject.toml
src/primeday/: primeday.py  primeday.pyi  rfc5545.py  rfc5545.pyi  rfc7986.py  rfc7986.pyi
